--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
+    "joi": "^17.6.0",
     "mongoose": "^6.5.2",
     "nodemon": "^2.0.19"
   }
