--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "config": "^3.3.8",
+    "debug": "^4.3.4",
     "express": "^4.18.1",
     "helmet": "^6.0.0",
     "morgan": "^1.10.0"
